--- a/project/src/main/res/values-de/strings.xml
+++ b/project/src/main/res/values-de/strings.xml
@@ -902,7 +902,7 @@
     <!-- Cars -->
     <string name="nav_cars">Mietwagen</string>
     <!-- Activities -->
-    <string name="nav_lx">Aktivitäten</string>
+    <string name="nav_lx">Vor Ort</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -1902,6 +1902,8 @@
     <string name="add_new_traveler">Neuen Reisenden hinzufügen</string>
     <!-- Select card from checkout saved credit cards list -->
     <string name="saved_creditcards">Gespeicherte Karten</string>
+    <!-- Select card from checkout saved cards list -->
+    <string name="select_saved_cards">Gespeicherte Karten auswählen</string>
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">Neue Karte hinzufügen</string>
     <!-- Add Guest for hotels -->
@@ -1977,6 +1979,10 @@
     <string name="email_disclaimer">Die Bestätigungsmail geht an diese Adresse</string>
     <!-- Expires on colored template -->
     <string name="expires_colored_TEMPLATE">Gültig bis %1$s</string>
+    <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">Ich möchte keine Newsletter von {brand} mit Reiseschnäppchen, Sonderangeboten und weiteren Infos erhalten.</string>
+    <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">Ich möchte Newsletter von {brand} mit Reiseschnäppchen, Sonderangeboten und weiteren Infos erhalten.</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2159,6 +2165,8 @@
     <string name="add_insurance">Reiseschutz hinzufügen</string>
     <!-- Insurance -->
     <string name="insurance">Reiseschutz</string>
+    <!-- Insurance label on itin section -->
+    <string name="insurance_itin_label">Reiseschutz</string>
     <!-- Air attach messaging -->
     <string name="air_attach_alert">Weil Sie einen Flug gebucht haben:</string>
     <!-- Air attach savings messaging -->
@@ -2873,9 +2881,9 @@
     <!-- Label for "app support" button in info page -->
     <string name="app_support">App-Support</string>
     <!-- Label for link to terms and conditions -->
-    <string name="info_label_terms_conditions">Allgemeine Geschäftsbedingungen</string>
+    <string name="info_label_terms_conditions">allgemeinen Geschäftsbedingungen</string>
     <!-- Label for link to privacy policy -->
-    <string name="info_label_privacy_policy">Datenschutzrichtlinien</string>
+    <string name="info_label_privacy_policy">Datenschutzrichtlinie</string>
     <!-- Copyright information -->
     <string name="copyright_TEMPLATE">© Copyright 2012-{year} {brand}, Inc.\nAlle Rechte vorbehalten.</string>
     <!-- Dialog Title telling the user they have been signed of their account and all data saved about them has been removed -->
@@ -3594,10 +3602,19 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">Mit dem Durchführen dieser Buchung bestätige ich, dass ich die %1$s, die %2$s und die %3$s gelesen habe und anerkenne.</string>
+    <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="account_creation_legal_TEMPLATE">Ich habe die %1$s und die %2$s gelesen und akzeptiert.</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">Geben Sie das Alter jedes Kindes an</string>
 
     <string name="lob_not_supported_error_message">Leider können {lob} an Ihrem Standort noch nicht mobil gebucht werden.</string>
 
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_Expedia_account">Expedia-Konto erstellen</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Expedia">Willkommen bei Expedia</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Expedia_account_already_exists">Es gibt bereits ein Expedia-Konto mit dieser E-Mail-Adresse</string>
 </resources>
