--- a/project/src/main/res/values-en-rGB/strings.xml
+++ b/project/src/main/res/values-en-rGB/strings.xml
@@ -1902,6 +1902,8 @@
     <string name="add_new_traveler">Add New Traveller</string>
     <!-- Select card from checkout saved credit cards list -->
     <string name="saved_creditcards">Saved Cards</string>
+    <!-- Select card from checkout saved cards list -->
+    <string name="select_saved_cards">Select saved cards</string>
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">Add New Card</string>
     <!-- Add Guest for hotels -->
@@ -1977,6 +1979,10 @@
     <string name="email_disclaimer">Your confirmation email will be sent here</string>
     <!-- Expires on colored template -->
     <string name="expires_colored_TEMPLATE">Expires %1$s</string>
+    <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">I do not want to receive emails from {brand} with travel deals, special offers, and other information.</string>
+    <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">I want to receive emails from {brand} with travel deals, special offers, and other information.</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2159,6 +2165,8 @@
     <string name="add_insurance">Add Insurance</string>
     <!-- Insurance -->
     <string name="insurance">Insurance</string>
+    <!-- Insurance label on itin section -->
+    <string name="insurance_itin_label">Travel Protection</string>
     <!-- Air attach messaging -->
     <string name="air_attach_alert">Because you booked a flight</string>
     <!-- Air attach savings messaging -->
@@ -3593,10 +3601,19 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">By completing this booking I agree that I have read and accept the %1$s, the %2$s, and the %3$s.</string>
+    <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="account_creation_legal_TEMPLATE">I have read and agree to the %1$s and the %2$s.</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">Select each child\&apos;s age</string>
 
     <string name="lob_not_supported_error_message">Sorry, but {lob} booking is not yet available in your location.</string>
 
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_Expedia_account">Create an Expedia account</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Expedia">Welcome to Expedia</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Expedia_account_already_exists">An Expedia account already exists with this email</string>
 </resources>
