--- a/project/src/main/res/values-es/strings.xml
+++ b/project/src/main/res/values-es/strings.xml
@@ -1902,6 +1902,8 @@
     <string name="add_new_traveler">Agregar un nuevo pasajero</string>
     <!-- Select card from checkout saved credit cards list -->
     <string name="saved_creditcards">Tarjetas guardadas</string>
+    <!-- Select card from checkout saved cards list -->
+    <string name="select_saved_cards">Selecciona las tarjetas guardadas</string>
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">Ingresar una tarjeta nueva</string>
     <!-- Add Guest for hotels -->
@@ -1977,6 +1979,10 @@
     <string name="email_disclaimer">Tu correo electrónico de confirmación se enviará a esta dirección</string>
     <!-- Expires on colored template -->
     <string name="expires_colored_TEMPLATE">Fecha de vencimiento %1$s</string>
+    <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">No quiero recibir correos electrónicos de {brand} con ofertas de viajes, ofertas especiales ni otra información.</string>
+    <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">Quiero recibir correos electrónicos de {brand} con ofertas de viajes, ofertas especiales y otra información.</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2159,6 +2165,8 @@
     <string name="add_insurance">Agregar seguro</string>
     <!-- Insurance -->
     <string name="insurance">Seguro</string>
+    <!-- Insurance label on itin section -->
+    <string name="insurance_itin_label">Seguro de viaje</string>
     <!-- Air attach messaging -->
     <string name="air_attach_alert">Por haber reservado un vuelo</string>
     <!-- Air attach savings messaging -->
@@ -3593,10 +3601,19 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">Al completar esta reservación, acepto que he leído y acepto las %1$s, los %2$s, y la %3$s.</string>
+    <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="account_creation_legal_TEMPLATE">Leí y acepto los %1$s y la %2$s.</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">Selecciona la edad de cada niño</string>
 
     <string name="lob_not_supported_error_message">Lo sentimos, pero todavía no es posible reservar {lob} en tu ubicación.</string>
 
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_Expedia_account">Crear una cuenta de Expedia</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Expedia">Te damos la bienvenida a Expedia</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Expedia_account_already_exists">Ya existe una cuenta de Expedia para este correo electrónico</string>
 </resources>
