--- a/project/src/main/res/values-fr/strings.xml
+++ b/project/src/main/res/values-fr/strings.xml
@@ -1902,6 +1902,8 @@
     <string name="add_new_traveler">Ajouter un nouveau voyageur</string>
     <!-- Select card from checkout saved credit cards list -->
     <string name="saved_creditcards">Cartes sauvegardées</string>
+    <!-- Select card from checkout saved cards list -->
+    <string name="select_saved_cards">Sélectionner une carte enregistrée</string>
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">Ajouter une nouvelle carte</string>
     <!-- Add Guest for hotels -->
@@ -1977,6 +1979,10 @@
     <string name="email_disclaimer">Votre e-mail de confirmation sera envoyé à cette adresse</string>
     <!-- Expires on colored template -->
     <string name="expires_colored_TEMPLATE">Valable jusqu\&apos;au %1$s</string>
+    <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">Je ne souhaite pas recevoir d\&apos;e-mail de la part de {brand} contenant des offres de voyage, des promotions et des informations diverses.</string>
+    <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">Je souhaite recevoir des e-mails de la part de {brand} contenant des offres de voyage, des promotions et des informations diverses.</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2159,6 +2165,8 @@
     <string name="add_insurance">Ajouter une assurance</string>
     <!-- Insurance -->
     <string name="insurance">Assurance</string>
+    <!-- Insurance label on itin section -->
+    <string name="insurance_itin_label">Assurance voyage</string>
     <!-- Air attach messaging -->
     <string name="air_attach_alert">Grâce à votre réservation de vol</string>
     <!-- Air attach savings messaging -->
@@ -2548,7 +2556,7 @@
     <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">%2.0f%% de nos clients recommandent cet hôtel.</string>
     <!-- new material Hotel results cell guest rating -->
-    <string name="customer_rating_percent_Template">{rating} {percent}</string>
+    <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
     <string name="guest_recommend">de recommandations clients</string>
 
@@ -3593,10 +3601,19 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">En finalisant cette réservation, je reconnais avoir lu et j\&apos;accepte les %1$s, les %2$s et la %3$s.</string>
+    <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="account_creation_legal_TEMPLATE">J\&apos;ai lu et j\&apos;accepte les %1$s et la %2$s.</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">Sélectionnez l\&apos;âge de tous les enfants</string>
 
     <string name="lob_not_supported_error_message">Désolés, la réservation des {lob} n\&apos;est pas encore disponible pour votre position actuelle.</string>
 
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_Expedia_account">Créer un compte Expedia</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Expedia">Bienvenue sur Expedia</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Expedia_account_already_exists">Un compte Expedia existant est déjà associé à cette adresse e-mail</string>
 </resources>
