--- a/project/src/main/res/values-in/strings.xml
+++ b/project/src/main/res/values-in/strings.xml
@@ -1902,6 +1902,8 @@
     <string name="add_new_traveler">Tambah Traveler Baru</string>
     <!-- Select card from checkout saved credit cards list -->
     <string name="saved_creditcards">Kartu Tersimpan</string>
+    <!-- Select card from checkout saved cards list -->
+    <string name="select_saved_cards">Pilih kartu tersimpan</string>
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">Tambahkan Kartu Baru</string>
     <!-- Add Guest for hotels -->
@@ -1977,6 +1979,10 @@
     <string name="email_disclaimer">Email konfirmasi Anda akan dikirim ke sini</string>
     <!-- Expires on colored template -->
     <string name="expires_colored_TEMPLATE">Kedaluwarsa %1$s</string>
+    <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">Saya tidak ingin menerima email dari {brand} berisi promo perjalanan, penawaran khusus, dan informasi lainnya.</string>
+    <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">Saya ingin menerima email dari {brand} berisi promo perjalanan, penawaran khusus, dan informasi lainnya.</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2159,6 +2165,8 @@
     <string name="add_insurance">Tambah Asuransi</string>
     <!-- Insurance -->
     <string name="insurance">Asuransi</string>
+    <!-- Insurance label on itin section -->
+    <string name="insurance_itin_label">Perlindungan Perjalanan</string>
     <!-- Air attach messaging -->
     <string name="air_attach_alert">Karena Anda memesan penerbangan</string>
     <!-- Air attach savings messaging -->
@@ -3593,10 +3601,19 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">Dengan menyelesaikan pemesanan ini, saya menyatakan bahwa saya telah membaca dan menerima %1$s, %2$s, dan %3$s.</string>
+    <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="account_creation_legal_TEMPLATE">Saya telah membaca dan menyetujui %1$s serta %2$s.</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">Masukkan umur tiap anak</string>
 
     <string name="lob_not_supported_error_message">Maaf, pemesanan {lob} saat ini belum tersedia untuk kawasan Anda.</string>
 
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_Expedia_account">Buat akun Expedia</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Expedia">Selamat datang di Expedia</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Expedia_account_already_exists">Ada akun Expedia yang sudah terdaftar dengan email ini</string>
 </resources>
