--- a/project/src/main/res/values-it/strings.xml
+++ b/project/src/main/res/values-it/strings.xml
@@ -1902,6 +1902,8 @@
     <string name="add_new_traveler">Aggiungi un nuovo viaggiatore</string>
     <!-- Select card from checkout saved credit cards list -->
     <string name="saved_creditcards">Carte salvate</string>
+    <!-- Select card from checkout saved cards list -->
+    <string name="select_saved_cards">Seleziona carte salvate</string>
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">Aggiungi una nuova carta</string>
     <!-- Add Guest for hotels -->
@@ -1977,6 +1979,10 @@
     <string name="email_disclaimer">L\&apos;e-mail di conferma sarà inviata a questo indirizzo</string>
     <!-- Expires on colored template -->
     <string name="expires_colored_TEMPLATE">Scade in data %1$s</string>
+    <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">Non desidero ricevere e-mail da {brand} con offerte speciali, promozioni e altre informazioni.</string>
+    <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">Desidero ricevere e-mail da {brand} con offerte speciali, promozioni e altre informazioni.</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2159,6 +2165,8 @@
     <string name="add_insurance">Aggiungi assicurazione</string>
     <!-- Insurance -->
     <string name="insurance">Assicurazione</string>
+    <!-- Insurance label on itin section -->
+    <string name="insurance_itin_label">Assicurazione di viaggio</string>
     <!-- Air attach messaging -->
     <string name="air_attach_alert">Per aver prenotato un volo</string>
     <!-- Air attach savings messaging -->
@@ -3593,10 +3601,19 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">Completando questa prenotazione, confermo di aver letto e accettato %1$s, %2$s e %3$s.</string>
+    <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="account_creation_legal_TEMPLATE">Ho letto e accetto %1$s e %2$s.</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">Seleziona l\&apos;età di ciascun bambino</string>
 
     <string name="lob_not_supported_error_message">Siamo spiacenti, la prenotazione di {lob} non è al momento disponibile nella località in cui ti trovi.</string>
 
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_Expedia_account">Crea un account Expedia</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Expedia">Benvenuto su Expedia</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Expedia_account_already_exists">Questo indirizzo e-mail e già associato a un account Expedia</string>
 </resources>
