--- a/project/src/main/res/values-sv/strings.xml
+++ b/project/src/main/res/values-sv/strings.xml
@@ -1902,6 +1902,8 @@
     <string name="add_new_traveler">Lägg till ny resenär</string>
     <!-- Select card from checkout saved credit cards list -->
     <string name="saved_creditcards">Sparade kort</string>
+    <!-- Select card from checkout saved cards list -->
+    <string name="select_saved_cards">Välj sparade kort</string>
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">Lägg till nytt kort</string>
     <!-- Add Guest for hotels -->
@@ -1977,6 +1979,10 @@
     <string name="email_disclaimer">Din bokningsbekräftelse kommer att skickas hit</string>
     <!-- Expires on colored template -->
     <string name="expires_colored_TEMPLATE">Förfaller %1$s</string>
+    <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">Jag vill inte ta emot e-postutskick från {brand} med resetips, specialerbjudanden och annan information.</string>
+    <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">Jag vill ta emot e-postutskick från {brand} med resetips, specialerbjudanden och annan information.</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2159,6 +2165,8 @@
     <string name="add_insurance">Lägg till försäkring</string>
     <!-- Insurance -->
     <string name="insurance">Försäkring</string>
+    <!-- Insurance label on itin section -->
+    <string name="insurance_itin_label">Reseskydd</string>
     <!-- Air attach messaging -->
     <string name="air_attach_alert">Eftersom du bokade ett flyg</string>
     <!-- Air attach savings messaging -->
@@ -3593,10 +3601,19 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">Genom att slutföra bokningen bekräftar jag att jag har läst och godkänt %1$s, %2$s och %3$s.</string>
+    <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="account_creation_legal_TEMPLATE">Jag har läst och accepterar Expedias %1$s och %2$s.</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">Välj vardera barns ålder</string>
 
     <string name="lob_not_supported_error_message">Bokningar av {lob} är tyvärr inte tillgängliga där du befinner dig än.</string>
 
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_Expedia_account">Skapa ett Expediakonto</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Expedia">Välkommen till Expedia</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Expedia_account_already_exists">Ett Expediakonto existerar redan med den här e-postadressen</string>
 </resources>
