--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -1904,6 +1904,8 @@
     <string name="add_new_traveler">เพิ่มผู้เดินทางใหม่</string>
     <!-- Select card from checkout saved credit cards list -->
     <string name="saved_creditcards">บัตรเครดิตที่บันทึกไว้</string>
+    <!-- Select card from checkout saved cards list -->
+    <string name="select_saved_cards">เลือกบัตรที่บันทึกไว้</string>
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">เพิ่มบัตรใหม่</string>
     <!-- Add Guest for hotels -->
@@ -1979,6 +1981,10 @@
     <string name="email_disclaimer">เราจะส่งอีเมลยืนยันของคุณมาที่นี่</string>
     <!-- Expires on colored template -->
     <string name="expires_colored_TEMPLATE">หมดอายุ %1$s</string>
+    <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">ฉันไม่ต้องการรับอีเมลดีลท่องเที่ยว ข้อเสนอพิเศษ และข้อมูลอื่นๆ จาก {brand}</string>
+    <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">ฉันต้องการรับอีเมลดีลท่องเที่ยว ข้อเสนอพิเศษ และข้อมูลอื่นๆ จาก {brand}</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2161,6 +2167,8 @@
     <string name="add_insurance">เพิ่มประกันภัย</string>
     <!-- Insurance -->
     <string name="insurance">ประกันภัย</string>
+    <!-- Insurance label on itin section -->
+    <string name="insurance_itin_label">ประกันภัยการเดินทาง</string>
     <!-- Air attach messaging -->
     <string name="air_attach_alert">เพราะคุณจองเที่ยวบิน</string>
     <!-- Air attach savings messaging -->
@@ -3595,10 +3603,19 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">ในการดำเนินการจองนี้ให้เสร็จสมบูรณ์ ฉันได้อ่านและยอมรับ %1$s, %2$s และ %3$s แล้ว</string>
+    <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="account_creation_legal_TEMPLATE">ฉันได้อ่านและยอมรับใน%1$sและ%2$s</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">โปรดระบุอายุเด็ก</string>
 
     <string name="lob_not_supported_error_message">ขออภัย การจอง{lob}ยังไม่มีให้บริการในตำแหน่งของคุณ</string>
 
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_Expedia_account">สร้างบัญชีเอ็กซ์พีเดีย</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Expedia">ยินดีต้อนรับสู่เอ็กซ์พีเดีย</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Expedia_account_already_exists">อีเมลนี้มีบัญชีเอ็กซ์พีเดียอยู่แล้ว</string>
 </resources>
