--- a/project/src/main/res/values-vi/strings.xml
+++ b/project/src/main/res/values-vi/strings.xml
@@ -1902,6 +1902,8 @@
     <string name="add_new_traveler">Thêm khách mới</string>
     <!-- Select card from checkout saved credit cards list -->
     <string name="saved_creditcards">Thẻ đã lưu</string>
+    <!-- Select card from checkout saved cards list -->
+    <string name="select_saved_cards">Chọn thẻ đã lưu</string>
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">Thêm thẻ mới</string>
     <!-- Add Guest for hotels -->
@@ -1977,6 +1979,10 @@
     <string name="email_disclaimer">Email xác nhận sẽ được gửi đến đây</string>
     <!-- Expires on colored template -->
     <string name="expires_colored_TEMPLATE">Hết hạn %1$s</string>
+    <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">Tôi không muốn nhận email về ưu đãi, khuyến mãi và thông tin khác từ {brand}.</string>
+    <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">Tôi muốn nhận email về ưu đãi, khuyến mãi và thông tin khác từ {brand}.</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2159,6 +2165,8 @@
     <string name="add_insurance">Bổ sung bảo hiểm</string>
     <!-- Insurance -->
     <string name="insurance">Bảo hiểm</string>
+    <!-- Insurance label on itin section -->
+    <string name="insurance_itin_label">Bảo hiểm du lịch</string>
     <!-- Air attach messaging -->
     <string name="air_attach_alert">Vì quý vị đã đặt chỗ một chuyến bay</string>
     <!-- Air attach savings messaging -->
@@ -3593,10 +3601,19 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">Bằng việc hoàn tất quy trình đặt, tôi đồng ý mình đã đọc và chấp thuận %1$s, %2$s và %3$s.</string>
+    <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="account_creation_legal_TEMPLATE">Tôi đã đọc và đồng ý %1$s và %2$s.</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">Chọn tuổi từng trẻ</string>
 
     <string name="lob_not_supported_error_message">Rất tiếc, hiện {lob} chưa hỗ trợ đặt tại địa điểm của quý vị.</string>
 
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_Expedia_account">Tạo tài khoản Expedia</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Expedia">Expedia xin chào</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Expedia_account_already_exists">Đã có tài khoản Expedia tạo bằng địa chỉ email này</string>
 </resources>
