--- a/project/src/main/res/values-zh/strings.xml
+++ b/project/src/main/res/values-zh/strings.xml
@@ -1902,6 +1902,8 @@
     <string name="add_new_traveler">添加新旅客</string>
     <!-- Select card from checkout saved credit cards list -->
     <string name="saved_creditcards">保存的卡</string>
+    <!-- Select card from checkout saved cards list -->
+    <string name="select_saved_cards">选择保存的卡</string>
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">添加新卡</string>
     <!-- Add Guest for hotels -->
@@ -1977,6 +1979,10 @@
     <string name="email_disclaimer">您的确认邮件将会发送到这里。</string>
     <!-- Expires on colored template -->
     <string name="expires_colored_TEMPLATE">到期日期为 %1$s</string>
+    <!-- Label for merchandise opt out confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_out_TEMPLATE">我不要收到来自 {brand} 有关旅行优惠、特别促销和其他信息的电子邮件。</string>
+    <!-- Label for erchandise opt in confirmation for hotel guest checkout -->
+    <string name="hotel_checkout_merchandise_guest_opt_in_TEMPLATE">我要接收来自 {brand} 有关旅行优惠、特别促销和其他信息的电子邮件。</string>
 
     <!-- Section display address -->
     <!-- Two address lines to one -->
@@ -2159,6 +2165,8 @@
     <string name="add_insurance">添加保险</string>
     <!-- Insurance -->
     <string name="insurance">保险</string>
+    <!-- Insurance label on itin section -->
+    <string name="insurance_itin_label">旅行保障</string>
     <!-- Air attach messaging -->
     <string name="air_attach_alert">由于您预订了这个航班，</string>
     <!-- Air attach savings messaging -->
@@ -3593,10 +3601,19 @@
     <string name="textview_spannable_hyperlink_TEMPLATE">&lt;a href=\"%1$s\"&gt;%2$s&lt;/a&gt;</string>
     <!-- Car and LX checkout legal text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
     <string name="legal_TEMPLATE">完成此次预订即表示，您已经阅读并接受%1$s、%2$s和%3$s。</string>
+    <!-- Account creation legal template text eg: I have read and accept the Rules and Restrictions, the Terms & Conditions and Privacy Policy-->
+    <string name="account_creation_legal_TEMPLATE">我已查阅并同意%1$s和%2$s。</string>
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">选择每个儿童的年龄</string>
 
     <string name="lob_not_supported_error_message">抱歉，您所在的位置尚未提供{lob}预订服务。</string>
 
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_Expedia_account">创建 Expedia 帐户</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_Expedia">欢迎来到 Expedia</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_Expedia_account_already_exists">已有一个 Expedia 帐户使用此电子邮件地址</string>
 </resources>
