Related to 4763. More prominent callout for missing traveler details
Needed to update a string for both variates.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -1894,6 +1894,10 @@
     <string name="enter_traveler_info">Traveler Information</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Main traveler details</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Enter Main Traveler Details</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Main Traveler</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Saved</string>
     <!-- Edit button for traveler/payment -->
