Samsung deal in place of Mobile Exclusive.

--- a/project/src/samsung/res/values/strings.xml
+++ b/project/src/samsung/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="search_activities">Search activities</string>
 
     <string name="samsung_best_price_guarantee">Samsung Price Guarantee</string>
+
+    <string name="samsung_deal">Samsung deal</string>
 </resources>
